# zoomtube

./: .env.example  .gitignore  README.md  README_TEST.md  main.py  pyproject.toml  requirements.txt
config/: .env.example
data/: iframes.json
output/: iframes_clean.html
src/: __init__.py  download_zoom.py  generate_html.py  upload_youtube.py  upload_youtube_local.py  upload_youtube_local_massive.py  upload_youtube_online.py
src/state/: downloads.json  recordings.json
src/utils/: audio_utils.py  file_utils.py  validations.py
src/youtube/: upload_youtube.py  youtube_api.py
src/zoom/: download_zoom.py  zoom_api.py
src/zoomtube/: cli.py  config.py  constants.py
src/zoomtube.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/zoomtube/clients/: __init__.py  youtube.py  zoom.py  zoom_api.py  zoom_client.py
src/zoomtube/pipeline/: download.py  download_zoom.py  process.py  run.py  upload.py  upload_youtube.py
src/zoomtube/registries/: __init__.py  downloads.py  recordings.py  uploads.py
src/zoomtube/reports/: iframes.py
src/zoomtube/utils/: audio.py  config.py  downloads_registry.py  file_utils.py  logger.py  recordings.py  recordings_registry.py  uploads_registry.py
tests/functional/: test_cli_functional.py
tests/integration/clients/: test_youtube_client_integration.py  test_zoom_client_integration.py
tests/integration/pipeline/: test_pipeline_integration.py
tests/integration/utils/: test_utils_integration.py
tests/unit/clients/: test_youtube_client.py  test_zoom_client.py
tests/unit/utils/: test_audio.py  (+5 more)
(+3 files in other folders)
